changes to Dockerfile