@@ -1,7 +1,7 @@
 FROM gradle:7.0.0-jdk11
 COPY --chown=gradle:gradle . .
 WORKDIR .
-RUN gradle clean build -x test --no-daemon
+RUN gradle build -x test --no-daemon -Dorg.gradle.jvmargs=-XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap
 # RUN mvn clean install -DskipTests
 EXPOSE 8081
 CMD ["gradle", "bootRun"]
